samples/_failures_safe/1761433247_0df4fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed290fa0.c: In function ‘main’:
./samples/SAFE/__tmp_ed290fa0.c:155:17: error: expected declaration or statement at end of input
  155 |                 }
      |                 ^
./samples/SAFE/__tmp_ed290fa0.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed290fa0.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed290fa0.c:155:17: error: expected declaration or statement at end of input
